assets/css/style.css
body {
  background-color: #C2C3C7;
  font-family: 'Montserrat', sans-serif;
}

header {
  font-size: 50px;
  text-align: center;
  padding: 20px;
}
div {
  border: solid green;
}

.characterWrapper {
  width: 75%;
  margin-right: auto;
  margin-left: auto;
}


/*Character rendering */
/* Google fonts font-family: 'Itim', cursive;
font-family: 'Chonburi', cursive; */
.character {
  width: 25%;
  float: left;
  cursor: pointer;
  display: inline-block;
}

.character img {
  border: 0 none;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 200px;
}


.attack {
  text-align: center;
}

.action {
  margin: 15px 0px;
}

.character-name {
  text-align: center;
  text-transform: capitalize;
  line-height: 30px;
  font-family: 'Itim', cursive;
  font-size: 20px;
}

.character-health {
  text-align: center;
}

.enemy {
  border-style: solid;
  border-color: black;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  background-color: red;
}

#available-to-attack-section {
  float: right;
}

#selected-character {
  width: 190px;
  height: 160px;
}

#gameMessage {
  text-align: center;
}

#attacker {
  width: 190px;
  height: 160px;
}

#defender {
  width: 190px;
  height: 160px;
}

#defender-name {
  text-align: center;
}

#defender-image {
  padding: 0px 16px;
  margin: 3px 0px;
}

#defender-health {
  text-align: center;
}

#choose-enemy-button {
  visibility: hidden;
}

#restart-button {
  visibility: hidden;
}

#turn-counter {
  font-size: 150%;
}

.target-enemy {
  background-color: black;
  color: white;
}

@media only screen and (max-device-width: 1000px) {
  .character {
    display: block;
  }
}

